--- a/README.html
+++ b/README.html
@@ -820,12 +820,14 @@ hue-6-2: #e6c07b
 <li>npm install</li>
 <li>npm install @reduxjs/toolkit</li>
 <li>npm i -D daisyui@latest</li>
+<li>npm i react-icons</li>
 </ol>
 <h2 id="packges">packges</h2>
 <ol>
 <li>reduxjs/toolkit</li>
 <li>react-redux</li>
 <li>daisyui</li>
+<li>react-icons</li>
 </ol>
 
             
