--- a/README.html
+++ b/README.html
@@ -821,6 +821,10 @@ hue-6-2: #e6c07b
 <li>npm install @reduxjs/toolkit</li>
 <li>npm i -D daisyui@latest</li>
 <li>npm i react-icons</li>
+<li>npm install --save react-modal</li>
+<li>npm i mongoose</li>
+<li>npm install @tailwindcss/aspect-ratio@latest --save-dev</li>
+<li>npm i react-player</li>
 </ol>
 <h2 id="packges">packges</h2>
 <ol>
@@ -828,6 +832,10 @@ hue-6-2: #e6c07b
 <li>react-redux</li>
 <li>daisyui</li>
 <li>react-icons</li>
+<li>react-modal</li>
+<li>mongoose</li>
+<li>tailwindcss/aspect-ratio</li>
+<li>react-player</li>
 </ol>
 
             
