--- a/README.html
+++ b/README.html
@@ -825,6 +825,7 @@ hue-6-2: #e6c07b
 <li>npm i mongoose</li>
 <li>npm install @tailwindcss/aspect-ratio@latest --save-dev</li>
 <li>npm i react-player</li>
+<li>npm install firebase</li>
 </ol>
 <h2 id="packges">packges</h2>
 <ol>
@@ -836,6 +837,7 @@ hue-6-2: #e6c07b
 <li>mongoose</li>
 <li>tailwindcss/aspect-ratio</li>
 <li>react-player</li>
+<li>firebase</li>
 </ol>
 
             
